delete height value

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <title>Homework 1</title>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
     integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
-<link rel="stylesheet" href="./styles.css" />
+    crossorigin="anonymous" referrerpolicy="no-referrer">
+<link rel="stylesheet" href="./styles.css">
 </head>
 
 <body>
@@ -95,33 +95,32 @@
                 Our Portfolio
             </h2>
             <ul>
-                <li><img src="images/banking-app.jpg" width="360px" height="300px" alt="Banking app design"><br><b
+                <li><img src="images/banking-app.jpg" width="360px" alt="Banking app design"><br><b
                         class="products">Banking App</b><br>
                     <p class="productsection">App</p>
                 </li>
-                <li><img src="images/cashless-payment.jpg" width="360px" height="300px"
+                <li><img src="images/cashless-payment.jpg" width="360px"
                         alt="Cashless payment with phone by using qr payment system"><br><b class="products">Cashless
                         Payment</b><br>
                     <p class="productsection">Marketing</p>
                 </li>
                 </li>
-                <li><img src="images/meditation-app.jpg" width="360px" height="300px"
+                <li><img src="images/meditation-app.jpg" width="360px"
                         alt="Meditation app design for pc and phone"><br><b class="products">Meditation
                         App</b><br>
                     <p class="productsection">App</p>
                 </li>
-                </li>
-                <li><img src="images/taxi-service.jpg" width="360px" height="300px"
+                <li><img src="images/taxi-service.jpg" width="360px"
                         alt="A person drive a taxi with using mobile app"><br><b class="products">Taxi
                         Service</b><br>
                     <p class="productsection">Marketing</p>
                 </li>
-                <li><img src="images/screen-illustrations.jpg" width="360px" height="300px"
-                        alt="Phone wallpaper design"><br><b class="products">Screen Illustrations</b><br>
+                <li><img src="images/screen-illustrations.jpg" width="360px" alt="Phone wallpaper design"><br><b
+                        class="products">Screen Illustrations</b><br>
                     <p class="productsection">Design</p>
                 </li>
-                <li><img src="images/online-courses.jpg" width="360px" height="300px"
-                        alt="A woman using online course app"><br><b class="products">Online
+                <li><img src="images/online-courses.jpg" width="360px" alt="A woman using online course app"><br><b
+                        class="products">Online
                         Courses</b><br>
                     <p class="productsection">Marketing</p>
                 </li>
