fixed wrong width usage

--- a/index.html
+++ b/index.html
@@ -66,26 +66,22 @@
             <ul>
                 <li>
                     <img src="images/mark.jpg" width="264" alt="Product Designer employee Mark Guerrero's photo"><br>
-                    <b class="worker">Mark
-                        Guerrero</b><br>
+                    <b class="worker">Mark Guerrero</b><br>
                     <p class="job">Product Designer</p>
                 </li>
                 <li>
                     <img src="images/tom.jpg" width="264" alt="Frontend Developer employee Tom Ford's photo"><br>
-                    <b class="worker">Tom
-                        Ford</b><br>
+                    <b class="worker">Tom Ford</b><br>
                     <p class="job">Frontend Developer</p>
                 </li>
                 <li>
                     <img src="images/camila.jpg" width="264" alt="Marketing employee Camila Garcia's photo"><br>
-                    <b class="worker">Camila
-                        Garcia</b><br>
+                    <b class="worker">Camila Garcia</b><br>
                     <p class="job">Marketing</p>
                 </li>
                 <li>
                     <img src="images/daniel.jpg" width="264" alt="UI Designer employee Daniel Wilson's photo"><br>
-                    <b class="worker">Daniel
-                        Wilson</b><br>
+                    <b class="worker">Daniel Wilson</b><br>
                     <p class="job">UI Designer</p>
                 </li>
             </ul>
@@ -95,33 +91,32 @@
                 Our Portfolio
             </h2>
             <ul>
-                <li><img src="images/banking-app.jpg" width="360px" alt="Banking app design"><br><b
-                        class="products">Banking App</b><br>
+                <li><img src="images/banking-app.jpg" width="360" alt="Banking app design"><br>
+                    <b class="products">Banking App</b><br>
                     <p class="productsection">App</p>
                 </li>
-                <li><img src="images/cashless-payment.jpg" width="360px"
+                <li><img src="images/cashless-payment.jpg" width="360"
                         alt="Cashless payment with phone by using qr payment system"><br><b class="products">Cashless
                         Payment</b><br>
                     <p class="productsection">Marketing</p>
                 </li>
-                </li>
-                <li><img src="images/meditation-app.jpg" width="360px"
-                        alt="Meditation app design for pc and phone"><br><b class="products">Meditation
+                <li><img src="images/meditation-app.jpg" width="360" alt="Meditation app design for pc and phone"><br>
+                    <b class="products">Meditation
                         App</b><br>
                     <p class="productsection">App</p>
                 </li>
-                <li><img src="images/taxi-service.jpg" width="360px"
-                        alt="A person drive a taxi with using mobile app"><br><b class="products">Taxi
+                <li><img src="images/taxi-service.jpg" width="360"
+                        alt="A person drive a taxi with using mobile app"><br>
+                    <b class="products">Taxi
                         Service</b><br>
                     <p class="productsection">Marketing</p>
                 </li>
-                <li><img src="images/screen-illustrations.jpg" width="360px" alt="Phone wallpaper design"><br><b
-                        class="products">Screen Illustrations</b><br>
+                <li><img src="images/screen-illustrations.jpg" width="360" alt="Phone wallpaper design"><br>
+                    <b class="products">Screen Illustrations</b><br>
                     <p class="productsection">Design</p>
                 </li>
-                <li><img src="images/online-courses.jpg" width="360px" alt="A woman using online course app"><br><b
-                        class="products">Online
-                        Courses</b><br>
+                <li><img src="images/online-courses.jpg" width="360" alt="A woman using online course app"><br>
+                    <b class="products">Online Courses</b><br>
                     <p class="productsection">Marketing</p>
                 </li>
             </ul>
